# texter

./: .gitignore  404.html  README.md  index.html  justfile  pyproject.toml  sitemap.xml
.github/workflows/: test.yml
changelog/: index.html
contributing/: index.html
examples/: index.html
mplty/: __init__.py  main.py
reference/add_digit/: index.html
search/: search_index.json
stylesheets/: style.css
