[project]
name = "mplty"
version = "0.1.0"
description = "Typst extension for matplotlib"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Joseph Barbier", email = "joseph@ysunflower.com" },
]
keywords = ["matplotlib", "typst"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "matplotlib>=3.10.9",
  "typst>=0.14.9",
]

[project.urls]
Documentation = "https://y-sunflower.github.io/mplty/"
Homepage = "https://y-sunflower.github.io/mplty/"
Issues = "https://github.com/y-sunflower/mplty/issues"
Repository = "https://github.com/y-sunflower/mplty"

[dependency-groups]
dev = [
  "mkdocstrings-python>=1.16.5",
  "prek>=0.3.2",
  "pytest>=8.3.5",
  "ruff>=0.11.13",
  "ty>=0.0.15",
]

[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mplty"]

[tool.uv.sources]
mplty = { workspace = true }
